spec/v3.1.1/5.4_implementation-notes.md
# 5.4 Implementation notes

There are many security concerns to consider when implementing or using MQTT. The following section should not be considered a `check list`.

An implementation might want to achieve some, or all, of the following:

### 5.4.1 Authentication of Clients by the Server

The CONNECT Packet contains Username and Password fields. Implementations can choose how to make use of the content of these fields. They may provide their own authentication mechanism, use an external authentication system such as LDAP [\[RFC4511\]](#RFC4511) or OAuth [\[RFC6749\]](#RFC6749) tokens, or leverage operating system authentication mechanisms.

Implementations passing authentication data in clear text, obfuscating such data elements or requiring no authentication data should be aware this can give rise to Man-in-the-Middle and replay attacks. Section 5.4.5 introduces approaches to ensure data privacy.

A Virtual Private Network (VPN) between the Clients and Servers can provide confidence that data is only being received from authorized Clients.

Where TLS [\[RFC5246\]](#RFC5246) is used, SSL Certificates sent from the Client can be used by the Server to authenticate the Client.

An implementation might allow for authentication where the credentials are sent in an Application Message from the Client to the Server.

### 5.4.2 Authorization of Clients by the Server

An implementation may restrict access to Server resources based on information provided by the Client such as User Name, Client Identifier, the hostname/IP address of the Client, or the outcome of authentication mechanisms.

### 5.4.3 Authentication of the Server by the Client

The MQTT protocol is not trust symmetrical: it provides no mechanism for the Client to authenticate the Server.

Where TLS [\[RFC5246\]](#RFC5246) is used, SSL Certificates sent from the Server can be used by the Client to authenticate the Server. Implementations providing MQTT service for multiple hostnames from a single IP address should be aware of the Server Name Indication extension to TLS defined in section 3 of RFC 6066 [\[RFC6066\]](#RFC6066).This allows a Client to tell the Server the hostname of the Server it is trying to connect to.

An implementation might allow for authentication where the credentials are sent in an Application Message from the Server to the Client.

A VPN between Clients and Servers can provide confidence that Clients are connecting to the intended Server.

### 5.4.4 Integrity of Application Messages and Control Packets

Applications can independently include hash values in their Application Messages. This can provide integrity of the contents of Publish Control Packets across the network and at rest.

TLS [\[RFC5246\]](#RFC5246) provides hash algorithms to verify the integrity of data sent over the network.

The use of VPNs to connect Clients and Servers can provide integrity of data across the section of the network covered by a VPN.

### 5.4.5 Privacy of Application Messages and Control Packets

TLS [\[RFC5246\]](#RFC5246) can provide encryption of data sent over the network. There are valid TLS cipher suites that include a NULL encryption algorithm that does not encrypt data. To ensure privacy Clients and Servers should avoid these cipher suites.

An application might independently encrypt the contents of its Application Messages. This could provide privacy of the Application Message both over the network and at rest. This would not provide privacy for other properties of the Application Message such as Topic Name.

Client and Server implementations can provide encrypted storage for data at rest such as Application Messages stored as part of a Session.

The use of VPNs to connect Clients and Servers can provide privacy of data across the section of the network covered by a VPN.

### 5.4.6 Non-repudiation of message transmission

Application designers might need to consider appropriate strategies to achieve end to end non-repudiation.

### 5.4.7 Detecting compromise of Clients and Servers

Client and Server implementations using TLS [\[RFC5246\]](#RFC5246) should provide capabilities to ensure that any SSL certificates provided when initiating a TLS [\[RFC5246\]](#RFC5246) connection are associated with the hostname of the Client connecting or Server being connected to.

Client and Server implementations using TLS [\[RFC5246\]](#RFC5246) can choose to provide capabilities to check Certificate Revocation Lists (CRLs [\[RFC5280\]](#RFC5280)) and Online Certificate Status Protocol (OSCP) [\[RFC6960\]](#RFC6960) to prevent revoked certificates from being used.

Physical deployments might combine tamper-proof hardware with the transmission of specific data in Application Messages. For example a meter might have an embedded GPS to ensure it is not used in an unauthorized location. [\[IEEE 802.1AR\]](#IEEE8021AR) is a standard for implementing mechanisms to authenticate a device`s identity using a cryptographically bound identifier.

### 5.4.8 Detecting abnormal behaviors

Server implementations might monitor Client behavior to detect potential security incidents. For example:

- Repeated connection attempts
- Repeated authentication attempts
- Abnormal termination of connections
- Topic scanning (attempts to send or subscribe to many topics)
- Sending undeliverable messages (no subscribers to the topics)
- Clients that connect but do not send data

Server implementations might disconnect Clients that breach its security rules.

Server implementations detecting unwelcome behavior might implement a dynamic block list based on identifiers such as IP address or Client Identifier.

Deployments might use network level controls (where available) to implement rate limiting or blocking based on IP address or other information.

### 5.4.9 Other security considerations

If Client or Server SSL certificates are lost or it is considered that they might be compromised they should be revoked (utilizing CRLs [\[RFC5280\]](#RFC5280) and/or OSCP [\[RFC6960\]](#RFC6960)).

Client or Server authentication credentials, such as User Name and Password, that are lost or considered compromised should be revoked and/or reissued.

In the case of long lasting connections:

- Client and Server implementations using TLS [\[RFC5246\]](#RFC5246) should allow for session renegotiation to establish new cryptographic parameters (replace session keys, change cipher suites, change authentication credentials).

- Servers may disconnect Clients and require them to re-authenticate with new credentials.

Constrained devices and Clients on constrained networks can make use of TLS session resumption [\[RFC5077\]](#RFC5077), in order to reduce the costs of reconnecting TLS [\[RFC5246\]](#RFC5246) sessions.

Clients connected to a Server have a transitive trust relationship with other Clients connected to the same Server and who have authority to publish data on the same topics.

### 5.4.10 Use of SOCKS

Implementations of Clients should be aware that some environments will require the use of SOCKSv5 [\[RFC1928\]](#RFC1928) proxies to make outbound Network Connections. Some MQTT implementations could make use of alternative secured tunnels (e.g. SSH) through the use of SOCKS. Where implementations choose to use SOCKS, they should support both anonymous and user-name password authenticating SOCKS proxies. In the latter case, implementations should be aware that SOCKS authentication might occur in plain-text and so should avoid using the same credentials for connection to a MQTT Server.

### 5.4.11 Security profiles

Implementers and solution designers might wish to consider security as a set of profiles which can be applied to the MQTT protocol. An example of a layered security hierarchy is presented below.

#### 5.4.11.1 Clear communication profile

When using the clear communication profile, the MQTT protocol runs over an open network with no additional secure communication mechanisms in place.

#### 5.4.11.2 Secured network communication profile

When using the secured network communication profile, the MQTT protocol runs over a physical or virtual network which has security controls e.g., VPNs or physically secure network.

#### 5.4.11.3 Secured transport profile

When using the secured transport profile, the MQTT protocol runs over a physical or virtual network and using TLS [\[RFC5246\]](#RFC5246) which provides authentication, integrity and privacy.

TLS [\[RFC5246\]](#RFC5246) Client authentication can be used in addition to – or in place of – MQTT Client authentication as provided by the Username and Password fields.

#### 5.4.11.4 Industry specific security profiles

It is anticipated that the MQTT protocol will be designed into industry specific application profiles, each defining a threat model and the specific security mechanisms to be used to address these threats. Recommendations for specific security mechanisms will often be taken from existing works including:

[\[NISTCSF\]](#NISTCSF) NIST Cyber Security Framework
[\[NIST7628\]](#NIST7628) NISTIR 7628 Guidelines for Smart Grid Cyber Security
[\[FIPS1402\]](#FIPS1402) Security Requirements for Cryptographic Modules (FIPS PUB 140-2)
[\[PCIDSS\]](#PCIDSS) PCI-DSS Payment Card Industry Data Security Standard
[\[NSAB\]](#NSAB) NSA Suite B Cryptography

